<?xml version="1.0" encoding="utf-8"?>
<!-- Note that the xlmns:app tag is for connecting the puck attirbutes to the joystick view -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/entire_view"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/zeroHeading"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_heading"
                    />
                <Button
                    android:id="@+id/zeroLocation"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_location"
                    />
                <Button
                    android:id="@+id/colorPickerButton"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/color_picker_title"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/speed_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    />
                <SeekBar
                    android:id="@+id/speedSeek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:progressDrawable="@drawable/seekbar_style"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentEnd="true"
                    >
                    <TextView
                        android:text="@string/spin_title"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight=".5"
                        android:gravity="center_vertical|right"
                        />
                    <Switch
                        android:id="@+id/spinSwitch"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight=".5"
                        android:gravity="center"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/developerModeLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal"
                    android:layout_alignParentEnd="true"
                    android:visibility="invisible"
                    >
                    <TextView
                        android:text="@string/developer_mode"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".5"
                        android:gravity="center_vertical|right"
                        />
                    <Switch
                        android:id="@+id/developerModeSwitch"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".5"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addRobot"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/add_robot"
                />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/localizer"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/localizer"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp">

            <TextView
                android:text="@string/rssi_title"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                />
            <Space
                android:layout_width="2dp"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/rssi_val"
                android:textSize="20dp"
                android:text="@string/rssi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                />
            <Space
                android:layout_width="2dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/rssi_unit"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"/>
            <TextView
                android:id="@+id/rssi_median"
                android:textSize="32sp"
                android:text="@string/rssi_median"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                />
            <Space
                android:layout_width="2dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textSize="32sp"
                android:text="@string/rssi_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <TextView
            android:id="@+id/accelerometer"
            android:textSize="20sp"
            android:text="@string/accel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <TextView
            android:id="@+id/gyrometer"
            android:textSize="20sp"
            android:text="@string/gyro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <TextView
            android:id="@+id/locator"
            android:textSize="20sp"
            android:text="@string/locator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            />


    </LinearLayout>



    <!-- The joystick view for the application -->
    <com.orbotix.joystick.api.JoystickView
        android:id="@+id/joystickView"
        android:visibility="visible"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:puck_radius="60dp"
        app:edge_overlap="10dp"
        app:alpha="0.9"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:focusable="false"
        />

    <!--com.orbotix.calibration.api.CalibrationImageButtonView
        android:id="@+id/calibrateButton"
        android:visibility="visible"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="#00000000"
        android:scaleType="centerInside"
        android:layout_marginBottom="10dp"
        app:widget_orientation="above"
        app:foreground_color="#FFFFFFFF"
        app:background_color="#FF1990FF"
        app:calibration_circle_radius="50dp"
        app:calibration_center_x = "30dp"
        app:calibration_center_y = "-30dp"/-->


    <!-- This needs to be the last element in your xml page if you want two finger calibration to work
     anywhere in your application's page -->
    <com.orbotix.calibration.api.CalibrationView
        android:id="@+id/calibrationView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:twoFingerEnabled="true"
        />

    <!-- In this case, we want fragments to display over the calibration view -->
    <FrameLayout
        android:id="@+id/fragment_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</RelativeLayout>

